# alibabacloud-api-mcp-server

./: .gitignore  README-EN.md  README-PROXY-EN.md  README-PROXY.md  README.md  pyproject.toml
docs/: local-mcp-servers-en.md  local-mcp-servers.md
docs/superpowers/specs/: 2026-05-20-telemetry-view-design.md
examples/: report_telemetry_demo.py
src/alibabacloud/mcp_proxy/: __init__.py  cli.py  config.py  safety_policy.py  session_marker.py
src/alibabacloud/mcp_proxy/auth/: ims_access_token.py  token_provider.py
src/alibabacloud/mcp_proxy/session/: reconnecting_session.py
src/alibabacloud/mcp_proxy/telemetry/: report.py
src/alibabacloud/mcp_proxy/telemetry_view/: data.py  server.py
src/alibabacloud/mcp_proxy/telemetry_view/static/: app.js  index.html  style.css
src/alibabacloud/mcp_proxy/transport/: http_client.py  upstream_http.py  upstream_sse.py
tests/: test_cli.py  test_http_client.py  test_ims_access_token.py  test_package_entrypoints.py  test_plugin_telemetry_cli.py  test_reconnecting_session.py  test_report_telemetry.py  test_safety_policy.py  test_session_marker.py  test_telemetry_view_data.py  test_telemetry_view_server.py  test_telemetry_view_watcher.py  test_token_provider.py  test_upstream_http.py  test_upstream_sse.py
