[project]
name = "alibabacloud.mcp-proxy"
version = "0.2.2"
description = "Local stdio MCP proxy for Alibaba Cloud OpenAPI MCP servers."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "Alibaba Cloud" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aiohttp>=3.9.0",
    "alibabacloud-credentials>=1.0.8",
    "alibabacloud-openapi-util>=0.2.4",
    "alibabacloud-tea-openapi>=0.4.4",
    "alibabacloud-tea-util>=0.3.14",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/aliyun/alibabacloud-api-mcp-server"
Repository = "https://github.com/aliyun/alibabacloud-api-mcp-server"

[project.scripts]
"alibabacloud.mcp-proxy" = "alibabacloud.mcp_proxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alibabacloud"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.0.0",
]
